--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -1,38 +1,76 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.DocsList-block {
+    border: 1px solid black;
+    padding: 2px 2px 2px 2px;
+    margin: 0 0 0 0;
+    display: inline-block;
+}
+.DocsList-ul {
+    padding: 2px 2px 2px 2px;
+    margin: 0 0 0 0;
+    display: inline-block;
+    text-align: center;
+}
+.DocsList-item {
+    list-style: none;
+    border: 1px solid gray;
+    cursor: pointer;
+
+}
+
+.DocsList-item:hover {
+    background-color: lightgreen;
+}
+
+.Nav-block {
+    background-color: lightblue;
+    margin: 5px 5px 5px 5px;
+    padding: 5px 5px 5px 5px;
+
+}
+
+.Nav-block, a {
+    padding: 0 10px 0 10px;
+    text-decoration: none;
+}
+.Nav-active {
+    background-color: aqua;
 }
