--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -38,22 +38,15 @@
 }
 
 .ConversationsList-block {
-    border: 1px solid black;
     padding: 2px 2px 2px 2px;
     margin: 0 0 0 0;
     display: inline-block;
-}
-.ConversationsList-ul {
-    padding: 2px 2px 2px 2px;
-    margin: 0 0 0 0;
-    display: inline-block;
-    text-align: center;
 }
 .ConversationsList-item {
     list-style: none;
     border: 1px solid gray;
     cursor: pointer;
-
+    padding: 3px;
 }
 
 .ConversationsList-item:hover {
@@ -88,4 +81,18 @@
 
 .login-reactLogo {
     width: 200px;
+}
+
+.addConversation {
+    background-color: gray;
+}
+.addConversation h5 {
+    position: absolute;
+    left: 50%;
+    margin: 20px -50% 0 0;
+    transform: translate(-50%, -50%)
+}
+.addConversation h5:hover {
+    background-color: lightgreen;
+    cursor: pointer;
 }
